# real-time-crypto

./: README.md
docker-compose/: Makefile  feature_pipeline.yml  redpanda.yml
services/kafka_to_feature_store/: Makefile  pyproject.toml
services/kafka_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade_producer/: Makefile  pyproject.toml
services/trade_producer/src/: config.py  kraken_api.py  main.py
services/trade_to_ohlc/: Dockerfile  Makefile  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
